--- a/news.txt
+++ b/news.txt
@@ -1,6 +1,7 @@
 
+06.07.2024
+Обновлена сетевая инфраструктура
+
 20.06.2024
 Обновление платформы облака
-
-18.06.2024
-Обновление серверов баз данных
+   
